<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/purple_bg">


    <TextView
        android:id="@+id/accelerometerValuesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/accelerometerValues_default"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.443" />


    <Button
        android:id="@+id/cycleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="103dp"

        android:onClick="onCycleClick"
        android:text="@string/button_cycle_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/crash_message"
        android:text="@string/crash_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:fontFamily="@font/ubuntu_light"
        android:visibility="gone"
        android:layout_marginTop="53dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timerTextView"
        android:text="@string/timerTextView"
        android:layout_width="wrap_content"
        android:fontFamily="@font/ubuntu_light"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginTop="103dp"
        android:visibility="gone"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/contactID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Enter emergency contact"
        android:layout_marginTop="203dp"
        android:phoneNumber="true"
        android:textColorHint="@color/abc_primary_text_material_dark"
        android:layout_centerHorizontal="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="253dp"
        android:layout_below="@+id/contactID"
        android:layout_alignLeft="@+id/contactID"
        android:layout_alignStart="@+id/contactID"
        android:textColorHint="@color/abc_primary_text_material_dark"
        android:hint="Enter Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/crash_button"
        android:text="@string/crash_button"
        android:onClick="okayFunc"
        android:fontFamily="@font/ubuntu_light"
        android:layout_width="wrap_content"
        android:layout_marginTop="203dp"
        android:visibility="gone"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/EmergencyCall"
        android:text="@string/EmergencyCall"
        android:layout_width="wrap_content"
        android:fontFamily="@font/ubuntu_light"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginTop="203dp"
        android:visibility="gone"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    <Button-->
<!--        android:id="@+id/crashButton"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="171dp"-->
<!--        android:onClick="onCrashClick"-->
<!--        android:text="@string/button_crash_default"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.5"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

</androidx.constraintlayout.widget.ConstraintLayout>